# pdf_structure_viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs  print_pdf_info.rs
src/print_tree/: cursor_info.rs  legend.rs  mod.rs  pdf_content_stream.rs  pdf_objects.rs  stream_operations.rs  tree_display_settings.rs
