[package]
name = "pdf-structure-viewer"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
structopt = "0.3.25"
lopdf = "0.27.0"
