[package]
name = "pdf_structure_viewer"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pdf", "structure", "viewer", "adobe"]
categories = ["command-line-utilities", "encoding", "visualization"]
repository = "https://github.com/ralpha/pdf_structure_viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
structopt = "0.3.25"
yansi = "0.5.0"
lazy_static = "1.4.0"
lopdf = { version = "0.27.0", features = [
    "chrono_time",
    "nom_parser",
], default-features = false }
